src/kubernetes/step-4-b/000-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: com-gft-deuba-unity-release-1
  labels: 
    demo/project: com.gft.deuba.unity.release-1
    demo/app: step-4
    config.istio.io/admission-webhooks: enabled
    istio-injection: enabled
