src/kubernetes/step-4-b/110-dep-frontend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app.kubernetes.io/part-of: step-4
    app.kubernetes.io/component: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      PROJECT: com.gft.deuba.unity.release-1
      app.kubernetes.io/part-of: step-4
      app.kubernetes.io/component: frontend
  template:
    metadata:
      name: frontend
      labels:
        PROJECT: com.gft.deuba.unity.release-1
        app.kubernetes.io/part-of: step-4
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: com.gft.deuba.unity.release-1.frontend.fe-measure:v1
          args: [ "--name", "frontend-1", "--device", "http://thermometer/measure" ]
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
