src/kubernetes/step-4-b/210-dep-thermometer-1.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermometer-v1.0.0
  namespace: com-gft-deuba-unity-release-1
  labels:
    demo/project: com.gft.deuba.unity.release-1
    demo/app: step-4
    demo/module: thermometer
    demo/version: "1.0.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      demo/project: com.gft.deuba.unity.release-1
      demo/app: step-4
      demo/module: thermometer
  template:
    metadata:
      name: thermometer
      labels:
        demo/project: com.gft.deuba.unity.release-1
        demo/app: step-4
        demo/module: thermometer
        demo/version: 1.0.0
    spec:
      containers:
        - name: thermometer
          image: com.gft.deuba.unity.release-1.application.ms-measure:v1
          imagePullPolicy: Never
          args: [ "--type", "thermometer", "--address", "01:00", "--name", "thermometer-1", "--randomsvc", "http://random/random" ]
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
