src/kubernetes/step-4-b/310-pod-random-1.yml
---

apiVersion: v1
kind: Pod
metadata:
  name: random-1
  namespace: com-gft-deuba-unity-release-1
  labels:
    PROJECT: com.gft.deuba.unity.release-1
    app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-4-b
    app.kubernetes.io/component: random
    app.kubernetes.io/version: "1.0.0"
spec:
  containers:
    - name: random
      image: com.gft.deuba.unity.release-1.backend.ms-random:v1
      imagePullPolicy: Never
      args: [ "--name", "random-1" ]
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
