src/kubernetes/step-4-b/300-svc-random.yml
---

apiVersion: v1
kind: Service
metadata:
  name: random
  namespace: com-gft-deuba-unity-release-1
spec:
  selector:
    PROJECT: com.gft.deuba.unity.release-1
    app.kubernetes.io/part-of: com.gft.deuba.unity.release-1.step-4-b
    app.kubernetes.io/component: random
    app.kubernetes.io/version: "1.0.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
